# aoc-reference-data

./: .gitignore  .yamllint  MANIFEST.in  Makefile  README.md  Verification  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  convert.yml  links.yml  lint.yml  liquipedia.yml  main.yml
aocref/: __init__.py  __main__.py  bootstrap.py  challonge.py  model.py
aocref/data/: constants.json  maps.yaml  platforms.json  players.yaml
aocref/data/datasets/: 0.json  1.json  100.json  7.json
aocref/data/events/: events.json  series.csv
ard_utility/: cli.py
ard_utility/commons/: __init__.py  errors.py
ard_utility/domain/: data_processor.py  index_handler.py  platforms.py  players.py  request_handler.py  teams.py
ard_utility/functionality/: ci.py  convert.py  liquipedia.py
ard_utility/utils/: __init__.py  io.py
data/: community_pages.yaml  constants.json  maps.yaml  platforms.json  players.yaml  streamers.yaml  teams.json
data/auto_generated/: players.json
data/datasets/: 0.json  1.json  100.json  101.json  2.json  200.json  300.json  7.json
data/events/: events.json  series.csv
data/relicapi/: gamemods.json
data/rms/ae/: AE_Continental.rms  AE_Houseboat_v1.1.rms  AE_Scandinavia.rms  AE_Valley_Fort.rms
data/rms/aoelympics/: AL_Aquapolis.rms  AL_Aquifer_v2.2.rms  AL_Atacama_v2.rms  AL_Atoll.rms  AL_Baltic.rms  AL_Bedouins.rms  AL_Big Freeze.rms  (+37 more)
scripts/: README.md  ci.py  convert.py  import_game_data.py  liquipedia.py
scripts/util/: __init__.py  data_processor.py  error.py  index.py  io.py  platforms.py  players.py  requests.py  teams.py
(+567 files in other folders)
